# issp

./: .gitignore  LICENSE  README.md  pyproject.toml
exercises/: 00_plaintext.py  01_otp.py  02_aes.py  03_otp_ex.py  04_aes_ex.py  05_chacha.py  06_key_distribution.py  07_hash_digest.py  08_hash_digest_ex.py  09_mac_encrypt.py  10_mac_keyed.py  11_hmac.py  12_mac_brute_force.py  13_xor_digest.py  14_xor_digest_attack.py  15_mac_encrypt_layers.py  16_rsa.py  17_rsa_sign.py  18_diffie_hellman.py  19_digital_envelope.py  20_rsa_mitm.py  20_signed_envelope.py  22_rsa_cert.py  23_lcg.py  24_ctr_rng.py  25_ansi_x917.py  26_lcg_attack.py  27_fortuna.py  28_password_brute_force.py  29_password_dict_attack.py  30_password_salt_attack.py  31_naive_auth_server.py  32_hotp.py  33_totp.py  34_challenge_response.py  35_biometric.py  36_backdoor.py  37_worm.py  38_virus.py  39_ransomware.py  (+1 more)
solutions/: 00_plaintext.py  01_otp.py  02_aes.py  03_otp_ex.py  04_aes_ex.py  05_chacha.py  06_key_distribution.py  07_hash_digest.py  08_hash_digest_ex.py  09_mac_encrypt.py  10_mac_keyed.py  11_hmac.py  12_mac_brute_force.py  13_xor_digest.py  14_xor_digest_attack.py  15_mac_encrypt_layers.py  16_rsa.py  17_rsa_sign.py  18_diffie_hellman.py  19_digital_envelope.py  20_signed_envelope.py  21_rsa_mitm.py  22_rsa_cert.py  23_lcg.py  24_ctr_rng.py  25_ansi_x917.py  26_lcg_attack.py  27_fortuna.py  28_password_brute_force.py  29_password_dict_attack.py  30_password_salt_attack.py  31_naive_auth_server.py  32_hotp.py  33_totp.py  34_challenge_response.py  35_biometric.py  36_backdoor.py  37_worm.py
(+23 files in other folders)
